<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_marginbottom"
        android:text="@string/text_quantity"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:onClick="decrement"
            android:text="@string/button_text_minus" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_paddingleft"
            android:paddingRight="@dimen/text_paddingright"
            android:text="@string/text_number"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:onClick="increment"
            android:text="@string/button_text_plus" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_marginbottom"
        android:layout_marginTop="@dimen/text_margintop"
        android:text="@string/text_priceheader"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ @string/text_price"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margintop"
        android:onClick="submitOrder"
        android:text="@string/button_text" />

</LinearLayout>
